[project]
name = "image-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "mflux>=0.17.5",
    "torch>=2.13.0.dev20260421",
    "torchao>=0.17.0",
]


[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "prek>=0.3.11",
    "ruff>=0.15.9",
]


[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { diffusers = false, torch = false, torchvision = false}


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true


[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
extend-exclude = [
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".vscode",
    "build",
    "site-packages",
    "*pycache*",
]


[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "A",        # flake8-builtins
    "ANN",      # flake8-annotations
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "C",        # flake8-comprehensions
    "C90",      # mccabe (function's complexity check)
    "COM818",
    "DTZ",      # flake8-datetimez
    "E",        # pycodestyle
    "EM",       # flake8-errmsg
    "F",        # pyflakes
    "FAST",     # FastAPI-specific linting rules
    "FIX",      # flake-fixme
    "FURB",     # refurb
    "I",        # isort
    "ICN",      # flake8-import-conventions
    "N",        # pep8-naming
    "PD",       # pandas-vet
    "PL",       # Warning
    "PTH",      # flake8-use-pathlib
    "Q",
    "RUF",      # Ruff-specific rules
    "SIM",      # flake8-simplify
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN204",
    "ANN401",
    "E111",
    "E114",
    "E117",
    "E402",
    "E501",
    "F401",
    "I001",
    "PLC0415",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "RUF001",
]


[tool.ruff.lint.isort]
lines-after-imports = 2
